objects/MDPERSONATOR__MD_businessContact__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__AddressLine1__c</fullName>
        <label>AddressLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BusinessCoder_Result__c</fullName>
        <label>Clean Suite BusinessCoder Result</label>
        <referenceTo>MDPERSONATOR__MD_businessCoderResult__c</referenceTo>
        <relationshipLabel>Clean Suite Business Contacts</relationshipLabel>
        <relationshipName>Clean_Suite_Business_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryName__c</fullName>
        <label>CountryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Gender__c</fullName>
        <label>Gender</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameFirst__c</fullName>
        <label>NameFirst</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameLast__c</fullName>
        <label>NameLast</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Clean Suite Business Contact</label>
    <nameField>
        <label>MD_businessContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clean Suite Business Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>